fix dynamic import syntax and ajust webfont baseline

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mde-editor",
+  "name": "mde-editor1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@uiw/react-codemirror": "^1.0.27",
+    "create-react-app": "^3.3.0",
     "customize-cra": "^0.5.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
